--- a/MyMediaPlayer/mainwindow.ui
+++ b/MyMediaPlayer/mainwindow.ui
@@ -86,7 +86,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="pushButton_3">
+      <widget class="QPushButton" name="m_pBtnSpeedSlow">
        <property name="text">
         <string/>
        </property>
@@ -103,7 +103,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="pushButton">
+      <widget class="QPushButton" name="m_pBtnPlayOrPause">
        <property name="text">
         <string/>
        </property>
@@ -120,7 +120,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="pushButton_2">
+      <widget class="QPushButton" name="m_pBtnSpeedUp">
        <property name="text">
         <string/>
        </property>
@@ -137,7 +137,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="pushButton_4">
+      <widget class="QPushButton" name="m_pBtnStop">
        <property name="text">
         <string/>
        </property>
